    powernapd will WARN the user via a wall message. Default yes.
  * sbin/powernapd: Use a Timestamp when sending the wall message.
  * InputMonitor now only enables/disables keyboard and mouse monitoring.
    - powernap/monitors/InputMonitor.py: Match regex in /by-id for kbd.
    - powernap/powernap.py: Support only mouse/keyboard
    - config: Only add options for mouse/keyboard.

 -- Andres Rodriguez <andreserl@ubuntu.com>  Fri, 28 Jan 2011 17:45:49 -0500

powernap (2.2-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * actions:
    - cpu_smp_sched,eth_wol: Dropped. pm-utils provides its own verion.
    - cpu_frequency: Store default governor to reset it to default value.
  * debian/rules: run dh_installdeb *after* dh_pycentral.
  * Add lintian-overrides (LP: #706974)
  * sbin/powernap: Fix pm-powersave command path.

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 28 Jan 2011 10:46:38 -0600

powernap (2.1-0ubuntu1) natty; urgency=low

  [ Andres Rodriguez ]
  * config:
    - Default ACTION to pm-powersave instead of best-effort.
    - Enable WoLMonitor and ConsoleMonitor by default
    - Disable ProcessMonitor by default.
    - Change powersave defaults to 0 instead of 4. Update related files.
  * powernap/monitors:
    - Rename RemoteMonitor to UDPMonitor.
    - Add WoLMonitor and support to run it.
    - Add ConsoleMonitor and support to run it.
  * powernap/powernap.py:
    - Improve config loading method for Monitors.
  * sbin/powernapd: Change approach of powernapd_loop.
    - GRACE period is time between ABSENT_SECONDS and
      (ABSENT_SECONDS - GRACE_SECONDS)
    - Only send a Wall message when on GRACE Period.
    - Enable Monitors to run at all times. Specifically when in PowerSave.
  * man/powernapd.8: Update to list available Monitors with description.
  * Update Copyright years/email in some of the files.

  [ Dustin Kirkland ]
  * config, powernap/monitors/TCPMonitor.py, powernap/powernap.py:
    - add a TCP Monitor